--- a/_config.yml
+++ b/_config.yml
@@ -11,4 +11,10 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
-markdown: kramdown
+# markdown: kramdown
+# kramdown:
+#       input: GFM
+
+markdown: redcarpet
+redcarpet:
+      extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
