--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ github_username:  jekyll
 
 # Build settings
 # markdown: kramdown
-# kramdown:
-#       input: GFM
-
 markdown: redcarpet
+
+kramdown:
+    input: GFM
 redcarpet:
-      extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+    extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
